syntax = "proto2";

package recall_cf;

message RecallCFRequest {
    optional string     TraceId = 1;
    required string     UserId = 2;
    repeated int32      DocIdList = 3;
    repeated int32      FromList = 4;
}

message RspInfo {
    required int32      DocId = 1;
    required float      DocScore = 2;
}

message RecallCFResponse {
    required int32      ErrorId = 1;
    optional string     ErrorMsg = 2;
    repeated RspInfo    RspInfoList = 3;
}

service RecallCF {
    rpc Handler (RecallCFRequest) returns (RecallCFResponse);
};

